# Chess

./: CMakeLists.txt  README.md  test_castling_issue.sh  test_chess.py  test_chess.sh
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  eval.cpp  eval.h  main.cpp  movegen.cpp  movegen.h  search.cpp  search.h
